# chattel

./: .gitignore  package.json  pnpm-lock.yaml  responses.d.ts  schema.d.ts  shared.d.ts
backend/: Cargo.toml  sqlite.db
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/core/: Cargo.toml
backend/core/src/: lib.rs  query.rs
backend/entity/: Cargo.toml
backend/entity/src/: item.rs  mod.rs  prelude.rs  timeblock.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/migrations/2023-04-23-190519_create_items/: down.sql  up.sql
backend/migrations/2023-04-23-192955_create_blocks/: down.sql  up.sql
backend/src/: item.rs  lib.rs  main.rs  models.rs  schema.rs  view.rs
