[package]
name = "chattel-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api"]

[dependencies]
diesel = { version = "2.0.4", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35" ], default-features = false }
dotenvy = "0.15"
chrono = "0.4.23"
diesel-derive-enum = { version = "2.0.1", features = ["sqlite"] }
